| Summary: | ASTERISK-26555: Multi-party Video: Fix some post Asterisk-11 regressions | ||
| Reporter: | Matt Jordan (mjordan) | Labels: | |
| Date Opened: | 2016-11-04 15:46:08 | Date Closed: | 2016-11-07 14:24:01.000-0600 |
| Priority: | Major | Regression? | |
| Status: | Closed/Complete | Components: | Bridges/bridge_softmix Core/Bridging |
| Versions: | 13.12.1 14.1.1 | Frequency of Occurrence | |
| Related Issues: | |||
| Environment: | Attachments: | ||
| Description: | Back in Asterisk 11, basic multi-party video worked in ConfBridge.
In Asterisk 12+, we apparently broke a few things for some clients (mostly WebRTC ones): * Sending a SSRC change on every party join/leave causes problems for WebRTC clients * Not handling video update requests can cause video to lag substantially for participants. It can take quite awhile for an I frame to show up; handling the video source update request in {{bridge_softmix}} is necessary to get all the participants sync'd up * The video source in bridge.c will be leaked when a party leaves the bridge (if it was the source). Yikes. | ||
| Comments: | By: Friendly Automation (friendly-automation) 2016-11-07 14:24:01.743-0600 Change 4309 merged by Joshua Colp: bridges/bridge_softmix: Remove SSRC changes on join/leave; update video source [https://gerrit.asterisk.org/4309|https://gerrit.asterisk.org/4309] By: Friendly Automation (friendly-automation) 2016-11-07 16:01:30.295-0600 Change 4314 merged by Joshua Colp: bridges/bridge_softmix: Remove SSRC changes on join/leave; update video source [https://gerrit.asterisk.org/4314|https://gerrit.asterisk.org/4314] By: Friendly Automation (friendly-automation) 2016-11-07 16:04:07.735-0600 Change 4304 merged by Joshua Colp: bridges/bridge_softmix: Remove SSRC changes on join/leave; update video source [https://gerrit.asterisk.org/4304|https://gerrit.asterisk.org/4304] By: Friendly Automation (friendly-automation) 2016-11-07 16:04:47.679-0600 Change 4305 merged by Joshua Colp: main/bridge: Add some verbose logging for video source changes [https://gerrit.asterisk.org/4305|https://gerrit.asterisk.org/4305] By: Friendly Automation (friendly-automation) 2016-11-07 16:04:51.906-0600 Change 4306 merged by Joshua Colp: main/bridge_channel: Fix channel reference leak on video source [https://gerrit.asterisk.org/4306|https://gerrit.asterisk.org/4306] By: Friendly Automation (friendly-automation) 2016-11-07 16:32:11.650-0600 Change 4311 merged by Joshua Colp: main/bridge_channel: Fix channel reference leak on video source [https://gerrit.asterisk.org/4311|https://gerrit.asterisk.org/4311] By: Friendly Automation (friendly-automation) 2016-11-07 16:44:08.305-0600 Change 4316 merged by Joshua Colp: main/bridge_channel: Fix channel reference leak on video source [https://gerrit.asterisk.org/4316|https://gerrit.asterisk.org/4316] By: Friendly Automation (friendly-automation) 2016-11-07 16:53:53.203-0600 Change 4310 merged by Joshua Colp: main/bridge: Add some verbose logging for video source changes [https://gerrit.asterisk.org/4310|https://gerrit.asterisk.org/4310] By: Friendly Automation (friendly-automation) 2016-11-07 17:49:49.356-0600 Change 4315 merged by Joshua Colp: main/bridge: Add some verbose logging for video source changes [https://gerrit.asterisk.org/4315|https://gerrit.asterisk.org/4315] | ||